# storage/api-docs/api-docs.json
@@ -15,7 +15,7 @@
                     "Auth"
                 ],
                 "summary": "Login user and get token",
-                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "operationId": "8616828af4c8b5b849ec221e9d1bbd42",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -134,79 +134,13 @@
                 }
             }
         },
-        "/api/user": {
-            "get": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Get authenticated user details",
-                "operationId": "b6a24a6e017f0b22494e60dfb186b935",
-                "responses": {
-                    "200": {
-                        "description": "User details fetched successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "User details retrieved successfully."
-                                        },
-                                        "data": {
-                                            "properties": {
-                                                "id": {
-                                                    "type": "integer",
-                                                    "example": 1
-                                                },
-                                                "name": {
-                                                    "type": "string",
-                                                    "example": "John Doe"
-                                                },
-                                                "email": {
-                                                    "type": "string",
-                                                    "example": "john@example.com"
-                                                },
-                                                "created_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-01T12:00:00Z"
-                                                },
-                                                "updated_at": {
-                                                    "type": "string",
-                                                    "format": "date-time",
-                                                    "example": "2024-01-10T12:00:00Z"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/api/recipes": {
             "get": {
                 "tags": [
                     "Recipes"
                 ],
                 "summary": "Get all recipes",
-                "operationId": "8b9e556d4d747bd60232961951494bfb",
+                "operationId": "b09637807d0247643d3942d85a7d92dd",
                 "responses": {
                     "200": {
                         "description": "List of recipes",
@@ -251,7 +185,7 @@
                     "Recipes"
                 ],
                 "summary": "Create a new recipe",
-                "operationId": "46448289940e329a644b891be9c66943",
+                "operationId": "617e252cdf9c7cb9b46aeaab2599183c",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -324,7 +258,7 @@
                     "Recipes"
                 ],
                 "summary": "Get a specific recipe by ID",
-                "operationId": "494913cea16e9bd1ed0d3a25eda1b1f0",
+                "operationId": "5e12d127634b95570ad3c6fc60b626e1",
                 "parameters": [
                     {
                         "name": "id",
@@ -384,7 +318,7 @@
                     "Recipes"
                 ],
                 "summary": "Update an existing recipe",
-                "operationId": "61665c36ed1115a4d53992f26035a8fd",
+                "operationId": "bb327515fd8e10759d4e27d624eee461",
                 "parameters": [
                     {
                         "name": "id",
@@ -455,7 +389,7 @@
                     "Recipes"
                 ],
                 "summary": "Delete a recipe",
-                "operationId": "ff2f374ba56017e8d111c4e218868b9a",
+                "operationId": "f33299a2c339996863ecb2b83b7d3da6",
                 "parameters": [
                     {
                         "name": "id",
@@ -490,7 +424,7 @@
                     "Recipes"
                 ],
                 "summary": "Search recipes by ingredients and time range",
-                "operationId": "8c7faacbc706052cc061f04f19415189",
+                "operationId": "ef9b1fe886bc451e8e9a55372e67772f",
                 "parameters": [
                     {
                         "name": "ingredients[]",
@@ -573,7 +507,7 @@
                     "Recipes"
                 ],
                 "summary": "Filter recipes by difficulty",
-                "operationId": "787d9ea952676dcd086d6c5844ad0393",
+                "operationId": "b805856826c6955655fdb2da21b262bf",
                 "parameters": [
                     {
                         "name": "level",
@@ -630,57 +564,76 @@
                     }
                 ]
             }
+        },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Get authenticated user details",
+                "operationId": "737446249f05cf2bd267a8871d13a06a",
+                "responses": {
+                    "200": {
+                        "description": "User details fetched successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User details retrieved successfully."
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "John Doe"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "example": "john@example.com"
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2024-01-01T12:00:00Z"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time",
+                                                    "example": "2024-01-10T12:00:00Z"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
         "schemas": {
-            "User": {
-                "title": "User",
-                "description": "User model",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "example": 1
-                    },
-                    "name": {
-                        "type": "string",
-                        "example": "Jane Doe"
-                    },
-                    "email": {
-                        "type": "string",
-                        "format": "email",
-                        "example": "jane@example.com"
-                    },
-                    "email_verified_at": {
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2024-06-01T12:34:56Z",
-                        "nullable": true
-                    },
-                    "password": {
-                        "type": "string",
-                        "format": "password",
-                        "writeOnly": true,
-                        "example": "hashed_password_string"
-                    },
-                    "remember_token": {
-                        "type": "string",
-                        "example": "Yx8kP0s7w9bAx01Az",
-                        "nullable": true
-                    },
-                    "created_at": {
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2024-06-01T12:00:00Z"
-                    },
-                    "updated_at": {
-                        "type": "string",
-                        "format": "date-time",
-                        "example": "2024-06-10T12:00:00Z"
-                    }
-                },
-                "type": "object"
-            },
             "Recipe": {
                 "title": "Recipe",
                 "description": "Recipe model schema",
@@ -735,6 +688,53 @@
                         "format": "date-time",
                         "example": null,
                         "nullable": true
+                    }
+                },
+                "type": "object"
+            },
+            "User": {
+                "title": "User",
+                "description": "User model",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "Jane Doe"
+                    },
+                    "email": {
+                        "type": "string",
+                        "format": "email",
+                        "example": "jane@example.com"
+                    },
+                    "email_verified_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-06-01T12:34:56Z",
+                        "nullable": true
+                    },
+                    "password": {
+                        "type": "string",
+                        "format": "password",
+                        "writeOnly": true,
+                        "example": "hashed_password_string"
+                    },
+                    "remember_token": {
+                        "type": "string",
+                        "example": "Yx8kP0s7w9bAx01Az",
+                        "nullable": true
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-06-01T12:00:00Z"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-06-10T12:00:00Z"
                     }
                 },
                 "type": "object"
